--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,7 +97,7 @@ services:
     command: npm start
     working_dir: /app
     volumes:
-      - ./ghi/attendees:/app
+      - ./ghi/app:/app
     environment:
       - HOST=0.0.0.0
       - PORT=3001
